<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TuLinchat</string>
    <string name="hello_world">Hello world!</string>
    <string name="send">发送</string>
    <string name="please_input_msg">请输入消息</string>
    
    <string name="action_settings">Settings</string>
    <string name="action_shared_preferences">SharedPreferences</string>
    <string name="action_read">读取</string>
    <string name="action_save">保存</string>
    <string name="action_delete">删除</string>
    <string name="action_claer">清空列表</string>
    <string name="please_input_save_info">请输入要保存的信息</string>
    <string name="save">保存</string>
    <string name="read">读取</string>

</resources>