<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.easthome.tulinchat.MainActivity" >

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_shared_preferences"
        android:orderInCategory="100"
        android:title="@string/action_shared_preferences"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_read"
        android:orderInCategory="100"
        android:title="@string/action_read"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_save"
        android:orderInCategory="100"
        android:title="@string/action_save"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_delete"
        android:orderInCategory="100"
        android:title="@string/action_delete"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_claer"
        android:orderInCategory="100"
        android:title="@string/action_claer"
        app:showAsAction="ifRoom"/>

</menu>